--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background-image: scr=".assets/images/background.jpg";
+  background-color: rgb(187, 187, 245);
 }
 
 header {
   font-size: 2rem;
   color: white;
   padding: 10px 30px 10px 5px;
-  margin: 7px,0 7px 7px;
+  margin: 0 0 7px 7px;
   background-color: rgb(214, 141, 6);
   width: 25%;
   height: 40%;
@@ -28,37 +28,49 @@ header {
 
 #number {
   background-color: rgb(73, 168, 73);
-  height: 80px;
-  width: 150px;
+  height: 100px;
+  width: 200px;
   margin: 0 0 7px 7px;
   float: left;
   text-align: center;
-  font-size: 4.5rem;
+  font-size: 3.0rem;
+  color: rgb(53, 52, 52);
 }
 
 .crystals{
   width: 40px;
   height: auto;
-  margin: 0 0 0 7px;
+  margin: 1px 1px 1px 7px;
 }
 
+#score {
+  background-color: rgb(62, 165, 151);
+  color: white;
+  height: 30px;
+  width: 200px;
+  margin: 0 0 10px 7px;
+  /* float:left; */
+  text-align: left;
+  font-size: 1rem;
+}
 .score {
   background-color: rgb(62, 165, 151);
   color: white;
-  height: 80px;
-  width: 150px;
-  margin: 0 0 7px 7px;
-  float: left;
-  text-align: center;
-  font-size: 1rem;
+  height: 100px;
+  width: 200px;
+  margin: 0 0 10px 0px;
+  /* float: left; */
+  text-align: left;
+  font-size: 4.5rem;
 }
 #games{
   background-color: rgba(0, 255, 255, 0.979);
-  height: 80px;
-  width: 70px;
+  height: 100px;
+  width: 90px;
   display: inline-block;
-  margin: 0 0 7px 7px;
+  margin: 0 0 10px 10px;
   font-size: .85rem;
   color: rgb(9, 9, 65);
   font: outline;
+  text-align: left;
 }
